This this the changelog file for the Pothos Widgets toolkit.

Release 0.2.1 (pending)
==========================

- Fix zoom selection box in waveform monitor display

Release 0.2.0 (2015-06-17)
==========================

- Auto-scale for wave monitor Y axis
- Added push button control widget
- Added logic analyzer display plotter block
- Use installed Qwt if found and version >= 6.1

Release 0.1.1 (2015-06-16)
==========================

- Fix null object error when RadioGroup is not toggled
- Updated internal Qwt to version 6.1.2
- Display plotters replot() after legend checkbox change

Release 0.1.0 (2014-12-21)
==========================

This is the first public release of the Pothos Widgets toolkit.