@@ -3,6 +3,7 @@ This this the changelog file for the Pothos Widgets toolkit.
 Release 0.2.1 (pending)
 ==========================
 
+- Disable previews of redundant plotter parameters
 - Fix zoom selection box in waveform monitor display
 
 Release 0.2.0 (2015-06-17)
